--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <meta http-equiv="X-UA-Compatible" content="just my portofolio:3">
+    <meta name="PrivatePortofolio" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="https://telegra.ph/file/b75fce68a64e5f6ac9ace.jpg">
+    <title>Iftech Portofolio :3</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,6 +13,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body class="main-content">
+     <audio autoplay>
+       <source src = "lofi.mp3" type ="audio/mp3">
+      <source src = "lofi.ogg" type ="audio/ogg">
+       This Browser Its not support HTML5 audio
+     </audio>
     <header class="container header active" id="home">
         <div class="header-content">
             <div class="left-header">
@@ -22,17 +28,17 @@
             </div>
             <div class="right-header">
                 <h1 class="name">
-                    Hi, I'm <span>Solano Milan Diaz.</span>
+                    Hi, I'm <span>Ifung Tech.</span>
                     A Web Developer.
                 </h1>
                 <p>
-                    I'm a Web Developer, I love to create beautiful and functional websites.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, libero?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque blanditiis sed aut!
+                    Im The Owner Of Api.justifung.tech.
+                  I like creating beautiful and useful websites for others 
+                  The languages ​​I know a little are JS, HTML and CSS
                 </p>
                 <div class="btn-con">
                     <a href="" class="main-btn">
-                        <span class="btn-text">Download CV</span>
+                        <span class="btn-text">Coming Soon</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
                 </div>
@@ -48,17 +54,15 @@
                 <div class="left-about">
                     <h4>Information About me</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Eveniet labore nihil obcaecati consequatur. Debitis error doloremque, 
-                        vero eos vel nemo eius voluptatem dicta tenetur modi. <br /> <br /> La musica
-                        delectus dolore fugiat exercitationem a, 
-                        ipsum quidem quo enim natus accusamus labore dolores nam. Unde.
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                        Harum non necessitatibus deleniti eum soluta.
+                      I am Ifung, I became interested in programming in 2020. 
+                      When I first started learning coding language, I used WhatsApp bot media, 
+                      Little by little I started to understand the language of JavaScript. <br /> <br /> I like the world of coding because in my eyes it is cool and amazing, 
+                      It's not uncommon for me to encounter difficulties when understanding this coding language.
+                      But there are people who always help me when I experience these difficulties.
                     </p>
                     <div class="btn-con">
                         <a href="#" class="main-btn">
-                            <span class="btn-text">Download CV</span>
+                            <span class="btn-text">Coming Soon</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
                     </div>
@@ -66,19 +70,19 @@
                 <div class="right-about">
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">650+</p>
+                            <p class="large-text">5</p>
                             <p class="small-text">Projects <br /> Completed</p>
                         </div>
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">10+</p>
+                            <p class="large-text">3+</p>
                             <p class="small-text">Years of <br /> experience</p>
                         </div>
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">300+</p>
+                            <p class="large-text">50+</p>
                             <p class="small-text">Happy <br /> Clients</p>
                         </div>
                     </div>
@@ -94,18 +98,18 @@
                 <h4 class="stat-title">My Skills</h4>
                 <div class="progress-bars">
                     <div class="progress-bar">
-                        <p class="prog-title">html5</p>
+                        <p class="prog-title">html</p>
                         <div class="progress-con">
-                            <p class="prog-text">80%</p>
+                            <p class="prog-text">45%</p>
                             <div class="progress">
                                 <span class="html"></span>
                             </div>
                         </div>
                     </div>
                     <div class="progress-bar">
-                        <p class="prog-title">css3</p>
+                        <p class="prog-title">css</p>
                         <div class="progress-con">
-                            <p class="prog-text">95%</p>
+                            <p class="prog-text">10%</p>
                             <div class="progress">
                                 <span class="css"></span>
                             </div>
@@ -114,7 +118,7 @@
                     <div class="progress-bar">
                         <p class="prog-title">javascript</p>
                         <div class="progress-con">
-                            <p class="prog-text">75%</p>
+                            <p class="prog-text">79%</p>
                             <div class="progress">
                                 <span class="js"></span>
                             </div>
@@ -132,7 +136,7 @@
                     <div class="progress-bar">
                         <p class="prog-title">NodeJS</p>
                         <div class="progress-con">
-                            <p class="prog-text">87%</p>
+                            <p class="prog-text">90%</p>
                             <div class="progress">
                                 <span class="node"></span>
                             </div>
@@ -141,7 +145,7 @@
                     <div class="progress-bar">
                         <p class="prog-title">Python</p>
                         <div class="progress-con">
-                            <p class="prog-text">70%</p>
+                            <p class="prog-text">20%</p>
                             <div class="progress">
                                 <span class="python"></span>
                             </div>
@@ -149,68 +153,29 @@
                     </div>
                 </div>
             </div>
-            <h4 class="stat-title">My Timeline</h4>
+            <h4 class="stat-title">My Projects</h4>
             <div class="timeline">
                 <div class="timeline-item">
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2010 - present</p>
-                    <h5>Web Developer<span> - Vircrosoft</span></h5>
+                    <p class="tl-duration">2023</p>
+                    <h5>Web Developer<span> - Justifung Api</span></h5>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                      This is my first Api Website.
                     </p>
                 </div>
                 <div class="timeline-item">
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2008 - 2011</p>
-                    <h5>Software Engineer<span> - Boogle, Inc.</span></h5>
+                    <p class="tl-duration">2020 - 2024</p>
+                    <h5>Whatsapp Bot<span> - Mahiru Ai.</span></h5>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                      A Whatsapp Bot Focused on AI.
                     </p>
                 </div>
-                <div class="timeline-item">
-                    <div class="tl-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <p class="tl-duration">2016 - 2017</p>
-                    <h5>C++ Programmer<span> - Slime Tech</span></h5>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
-                    </p>
-                </div>
-                <div class="timeline-item">
-                    <div class="tl-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <p class="tl-duration">2009 - 2013</p>
-                    <h5>Business Degree<span> - Sussex University</span></h5>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
-                    </p>
-                </div>
-                <div class="timeline-item">
-                    <div class="tl-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <p class="tl-duration">2013 - 2016</p>
-                    <h5>Computer Science Degree<span> - Brookes University</span></h5>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
-                    </p>
-                </div>
-                <div class="timeline-item">
-                    <div class="tl-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <p class="tl-duration">2017 - present</p>
-                    <h5>3d Animation<span> - Brighton University</span></h5>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
-                    </p>
-                </div>
+                
             </div>
         </section>
         <section class="container" id="portfolio">
@@ -446,8 +411,8 @@
                     <div class="left-contact">
                         <h4>Contact me here</h4>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            In, laborum numquam? Quam excepturi perspiciatis quas quasi.
+                          If you have any questions or other important matters, you can contact me directly at the address listed. 
+                          Don't hesitate to contact me!.
                         </p>
                         <div class="contact-info">
                             <div class="contact-item">
@@ -456,7 +421,7 @@
                                     <span>Location</span>
                                 </div>
                                 <p>
-                                    : London, united Kingdom
+                                    : Jawa Tengah, Klaten
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -465,7 +430,7 @@
                                     <span>Email</span>
                                 </div>
                                 <p>
-                                    <span>: maclinzuniversal@gmail.com</span>
+                                    <span>: Lordexe4646@gmail.com</span>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -474,7 +439,7 @@
                                     <span>Education</span>
                                 </div>
                                 <p>
-                                    <span>: Sussex University, East Sussex</span>
+                                    <span>: UGM</span>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -483,7 +448,7 @@
                                     <span>Mobile Number</span>
                                 </div>
                                 <p>
-                                    <span>: 07522670617</span>
+                                    <span>: 6287866844074</span>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -492,7 +457,7 @@
                                     <span>Languages</span>
                                 </div>
                                 <p>
-                                    <span>: Afrikaans, English, Spanish</span>
+                                    <span>: Indonesia, English</span>
                                 </p>
                             </div>
                         </div>
@@ -527,7 +492,7 @@
                             </div>
                             <div class="submit-btn">
                                 <a href="#" class="main-btn">
-                                    <span class="btn-text">Download CV</span>
+                                    <span class="btn-text">Iftexh</span>
                                     <span class="btn-icon"><i class="fas fa-download"></i></span>
                                 </a>
                             </div>
@@ -560,4 +525,4 @@
     </div>
     <script src="app.js"></script>
 </body>
-</html>
+                                </html>
